--- a/requirements.txt
+++ b/requirements.txt
@@ -1,73 +1,9 @@
-aiohttp==3.9.3
-aiosignal==1.3.1
 airtable==0.4.8
-annotated-types==0.6.0
-anyio==4.3.0
-attrs==23.2.0
-backoff==2.2.1
-beautifulsoup4==4.12.3
-certifi==2024.2.2
-chardet==5.2.0
-charset-normalizer==3.3.2
-click==8.1.7
-dataclasses-json==0.6.4
-deepdiff==6.7.1
-distro==1.9.0
-emoji==2.10.1
-faiss-cpu==1.8.0
-filetype==1.2.0
-frozenlist==1.4.1
-greenlet==3.0.3
-h11==0.14.0
-httpcore==1.0.4
-httpx==0.27.0
-idna==3.6
-inflection==0.5.1
 joblib==1.3.2
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==2.4
 langchain==0.1.11
-langchain-community==0.0.27
-langchain-core==0.1.30
-langchain-openai==0.0.8
-langchain-text-splitters==0.0.1
-langdetect==1.0.9
-langsmith==0.1.23
-lxml==5.1.0
-marshmallow==3.21.1
-multidict==6.0.5
-mypy-extensions==1.0.0
-nltk==3.8.1
-numpy==1.26.4
-oauthlib==3.2.2
-openai==1.13.3
-ordered-set==4.1.0
-orjson==3.9.15
-pyairtable==2.3.0.post1
-pydantic==2.6.3
-pydantic_core==2.16.3
-pypdf==4.1.0
+langchain_community==0.0.27
+langchain_openai==0.0.8
 python-dotenv==1.0.1
-python-iso639==2024.2.7
-python-magic==0.4.27
-PyYAML==6.0.1
-rapidfuzz==3.6.2
-regex==2023.12.25
-requests==2.31.0
-requests-oauthlib==1.3.1
 schedule==1.2.1
-sniffio==1.3.1
-soupsieve==2.5
-SQLAlchemy==2.0.28
-tabulate==0.9.0
-tenacity==8.2.3
-tiktoken==0.6.0
-tqdm==4.66.2
 tweepy==4.14.0
-typing-inspect==0.9.0
-unstructured==0.12.5
-unstructured-client==0.21.1
-urllib3==2.2.1
-wrapt==1.16.0
-yarl==1.9.4
+faiss-cpu==1.8.0
